--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "bcryptjs": "^3.0.2",
+    "bcrypt": "^6.0.0",
     "fastify": "^5.5.0",
     "tsup": "^8.5.0",
     "tsx": "^4.20.5",
     "typescript": "^5.9.2"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.6",
-    "@types/node": "^24.3.0"
+    "@types/bcrypt": "^6.0.0",
+    "@types/node": "^24.3.0",
+    "prisma": "^6.15.0"
   }
 }
