--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "dotenv": "^17.2.1",
     "fastify": "^5.5.0",
     "tsup": "^8.5.0",
     "tsx": "^4.20.5",
@@ -22,6 +23,7 @@
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
     "@types/node": "^24.3.0",
-    "prisma": "^6.15.0"
+    "prisma": "^6.15.0",
+    "zod": "^4.1.4"
   }
 }
