--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@fastify/jwt": "^10.0.0",
     "@prisma/client": "^6.15.0",
+    "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
     "dotenv": "^17.2.1",
     "fastify": "^5.5.0",
